--- a/shard.yml
+++ b/shard.yml
@@ -1,9 +1,10 @@
 name: ecdsa
-version: 0.2.0
+version: 1.0.0
 
 authors:
   - Alex Kampa <ak@sikoba.com>
   - Ihor Tsykalo <sarcasm008@gmail.com>
+  - Razvan Rosie
 
 targets:
   ecdsa:
